--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           registry-url: "https://registry.npmjs.org"
       - run: npm version ${{ steps.release.outputs.tag_name }} --no-git-tag-version
-      - run: npm publish
+      - run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
